--- a/ThreadPool/ThreadPool.vcxproj.filters
+++ b/ThreadPool/ThreadPool.vcxproj.filters
@@ -42,6 +42,15 @@
     <ClInclude Include="lock_guard_example.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="11_bank_transfer_wait_notify.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="01_hello_thread.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="02_lambda_thread.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
