--- a/ThreadPool/ThreadPool.vcxproj
+++ b/ThreadPool/ThreadPool.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="09_deadlock_bank_transfer.h" />
     <ClInclude Include="10_improved_bank_transfer.h" />
     <ClInclude Include="11_bank_transfer_wait_notify.h" />
+    <ClInclude Include="12_async_task.h" />
     <ClInclude Include="lock_guard_example.h" />
     <ClInclude Include="ThreadPool.h" />
     <ClInclude Include="03_thread_argument.h" />
