--- a/ThreadPool/ThreadPool.vcxproj.filters
+++ b/ThreadPool/ThreadPool.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="02_lambda_thread.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="12_async_task.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
