--- a/ThreadPool/ThreadPool.vcxproj
+++ b/ThreadPool/ThreadPool.vcxproj
@@ -148,6 +148,9 @@
     <ClInclude Include="10_improved_bank_transfer.h" />
     <ClInclude Include="11_bank_transfer_wait_notify.h" />
     <ClInclude Include="12_async_task.h" />
+    <ClInclude Include="13_packaged_task.h" />
+    <ClInclude Include="14_promise_future.h" />
+    <ClInclude Include="async_example.h" />
     <ClInclude Include="lock_guard_example.h" />
     <ClInclude Include="ThreadPool.h" />
     <ClInclude Include="03_thread_argument.h" />
